# methane-sentinel-labels

./: .gitignore  FINDINGS.md  README.md  pyproject.toml
fixtures/: cm_plumes_page1.json  cm_plumes_page2.json  cm_token.json
src/methane_sentinel_labels/: cli.py  config.py  models.py  visualization.py
src/methane_sentinel_labels/assembly/: dataset.py
src/methane_sentinel_labels/extraction/: enhancement.py  patches.py
src/methane_sentinel_labels/ingest/: carbon_mapper.py  methanesat.py
src/methane_sentinel_labels/matching/: cross_sensor.py  sentinel2.py
src/methane_sentinel_labels/training/: dataset.py  model.py  trainer.py
src/methane_sentinel_labels/validation/: carbon_mapper.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_visualization.py
tests/test_assembly/: test_dataset.py
tests/test_extraction/: test_enhancement.py  test_patches.py
tests/test_ingest/: test_carbon_mapper.py  test_methanesat.py
tests/test_matching/: test_cross_sensor.py  test_sentinel2.py
tests/test_training/: test_dataset.py  test_model.py  test_trainer.py
tests/test_validation/: test_carbon_mapper.py
